--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dist": "ng build --prod && workbox injectManifest"
+    "dist": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +23,6 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "workbox-sw": "^3.6.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
