--- a/angular.json
+++ b/angular.json
@@ -22,38 +22,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.json",
-              "src/images/",
-              "src/service-worker.js",
-              {
-                "glob": "workbox-sw.js",
-                "input": "node_modules/workbox-sw/build",
-                "output": "./workbox-3.6.3"
-              },
-              {
-                "glob": "workbox-core.prod.js",
-                "input": "node_modules/workbox-core/build/",
-                "output": "./workbox-3.6.3"
-              },
-              {
-                "glob": "workbox-precaching.prod.js",
-                "input": "node_modules/workbox-precaching/build/",
-                "output": "./workbox-3.6.3"
-              },
-              {
-                "glob": "workbox-background-sync.prod.js",
-                "input": "node_modules/workbox-background-sync/build/",
-                "output": "./workbox-3.6.3"
-              },
-              {
-                "glob": "workbox-routing.prod.js",
-                "input": "node_modules/workbox-routing/build/",
-                "output": "./workbox-3.6.3"
-              },
-              {
-                "glob": "workbox-strategies.prod.js",
-                "input": "node_modules/workbox-strategies/build/",
-                "output": "./workbox-3.6.3"
-              }
+              "src/images/"
             ],
             "styles": [
               "src/styles.css"
