--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.json",
-              "src/images/"
+              "src/images/",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.css"
@@ -52,7 +53,8 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ]
+              ],
+              "serviceWorker": true
             }
           }
         },
@@ -86,7 +88,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ]
           }
         },
