--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/pwa": "^0.13.0",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
