API Calls to Populate Dropdowns are Cached

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -23,5 +23,20 @@
         ]
       }
     }
+  ], 
+  "dataGroups": [
+    {
+      "name": "api-performance",
+      "urls": [
+        "/getStops",
+        "/getLoops"
+      ],
+      "cacheConfig": {
+        "cacheConfig": "performance",
+        "maxSize": 100,
+        "maxAge": "3d"
+      }
+    }
+    
   ]
 }
