--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/pwa": "^0.13.0",
     "@angular/router": "~7.0.0",
     "@angular/service-worker": "~7.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
