Add drivers route to cache.

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -29,7 +29,8 @@
       "name": "api-performance",
       "urls": [
         "/getStops",
-        "/getLoops"
+        "/getLoops",
+        "/getUsers"
       ],
       "cacheConfig": {
         "cacheConfig": "performance",
