--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets",
               "src/manifest.json",
               "src/images/",
+              "src/manifest.webmanifest",
               "src/manifest.webmanifest"
             ],
             "styles": [
@@ -93,6 +94,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/manifest.webmanifest",
               "src/manifest.webmanifest"
             ]
           }
