--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
+dist: trusty
+sudo: false
+
 language: node_js
 node_js:
-  - "9"
-dist: trusty
-sudo: required
-branches:
-  only:
-  - master
-before_script:
-  - npm install -g @angular/cli
+  - "8"
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
+cache:
+  directories:
+     - ./node_modules
+
+install:
+  - npm install
+
 script:
-- ng lint
-- ng build --prod --base-href https://kdesimini.github.io/ShuttleLogCollectionSystemSourceCode/
+  - npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI
+  - npm run e2e -- --protractor-config=./e2e/protractor-ci.conf.js
