--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -36,9 +36,9 @@
         "/getUsers.php"
       ],
       "cacheConfig": {
-        "cacheConfig": "performance",
+        "strategy?": "freshness",
         "maxSize": 500,
-        "maxAge": "1d"
+        "maxAge": "12h"
       }
     }
     
