Fix bug where items in dropdown would not appear
On the configure page, when navigating back to it, the values of the dropdowns were fine but they did not appear as they should.

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -28,6 +28,7 @@
     {
       "name": "api-performance",
       "urls": [
+        "/getStops.php",
         "/getStops",
         "/getLoops",
         "/getLoops.php",
@@ -37,7 +38,7 @@
         "/getBusNumbers"
       ],
       "cacheConfig": {
-        "strategy": "freshness",
+        "strategy": "performance",
         "maxSize": 500,
         "maxAge": "30d"
       }
